<resources>
    <string name="app_name">Cherry</string>
    <string name="login">Login</string>
    <string name="Signup">Sign up</string>
    <string name="cherry_description">Cherry logo picture</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create">Create Your Profile!</string>
    <string name="addimage">Add a profile picture</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="introduction">Introduction</string>
    <string name="birthday">Date of birth</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Other">Other</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="details">Details</string>
    <string name="AstrologicalSign">Astrological sign</string>
    <string name="age">Age</string>
</resources>
