<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".ui.accounts.ProfileCreationActivityFragment"
    tools:showIn="@layout/activity_profile_creation">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/undo_create"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/beige"
                android:scaleType="fitCenter"
                android:src="@drawable/exit" />

            <TextView
                android:id="@+id/create_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:foregroundGravity="center|fill"
                android:text="@string/create"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:visibility="visible" />


            <ImageButton
                android:id="@+id/profile_create"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/beige"
                android:scaleType="fitCenter"
                android:src="@drawable/checkmark" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/picture_button"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:backgroundTint="@color/beige"
            android:src="@drawable/camera2" />

        <Button
            android:id="@+id/add_image_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:backgroundTint="@color/beige"
            android:text="@string/addimage"
            android:textColor="@android:color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pink">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/firstname"
                    android:inputType="textPersonName"
                    android:textColorHint="@android:color/white"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"
                    android:textColorHint="@android:color/white"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textColorHint="@android:color/white"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/white"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:textColorHint="@android:color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/dob_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/beige"
                    android:text="@string/birthday" />

                <EditText
                    android:id="@+id/Introduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/introduction"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="5"
                    android:textColorHint="@android:color/white"
                    android:textSize="24sp" />

                <RadioGroup
                    android:id="@+id/gender_selection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Female" />

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Male" />

                    <RadioButton
                        android:id="@+id/other"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Other" />
                </RadioGroup>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>